--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <div class="page-container">
     <div class="left-zone">
-      <h1 class="inscription-titre">Inscription sécurisée</h1>
+      <h1 class="inscription-titre">Veuillez vous inscrire</h1>
       <form id="form-acces">
-        <label for="numero">Numéro WhatsApp :</label>
+        <label for="numero">Entrer votre numéro WhatsApp :</label>
         <input type="text" id="numero" placeholder="+22890123456" required />
-        <button type="submit">Recevoir le lien 📩</button>
+        <button type="submit">Recevoir votre lien d'inscription via</button>
       </form>
     </div>
     <div class="right-zone">
