--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <form id="form-acces">
         <label for="numero">Entrer votre numéro WhatsApp :</label>
         <input type="text" id="numero" placeholder="+22890123456" required />
-        <button type="submit">Recevoir votre lien d'inscription via</button>
+        <button type="submit">Recevoir votre lien d'inscription via Whatsapp</button>
       </form>
     </div>
     <div class="right-zone">
